changes in nethogs